# libglvnd

./: .travis.yml  README.md  meson.build  meson_options.txt
include/: meson.build
src/: meson.build
src/EGL/: meson.build
src/GL/: meson.build
src/GLESv1/: meson.build
src/GLESv2/: meson.build
src/GLX/: meson.build
src/GLdispatch/: export_list.ver  meson.build
src/GLdispatch/vnd-glapi/: meson.build  u_execmem.c
src/OpenGL/: meson.build
src/generate/: eglFunctionList.py  genCommon.py  gen_egl_dispatch.py  gen_gldispatch_mapi.py  gen_libOpenGL_exports.py  gen_libOpenGL_exports_old.py  gen_libgl_glxstubs.py  glvnd_gen.mk  meson.build
src/util/: meson.build
tests/: meson.build
tests/dummy/: GLX_dummy.c  meson.build
